Bug 513489 - "Defaults" button doesn't work as intended in Accessibility - Color Blindness Correction
Summary: "Defaults" button doesn't work as intended in Accessibility - Color Blindness...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_access (other bugs)
Version First Reported In: 6.5.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-17 15:44 UTC by Jin Liu
Modified: 2026-01-27 17:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2025-12-17 15:44:31 UTC
STEPS TO REPRODUCE
1. Go to systemsettings - Accessiblity - Color Blindness Correction.
2. Check "Enable". Select "Grayscale mode". Click "Apply".
3. Click "Defaults". Click "Apply". Now the effect is disabled.
4. Check "Enable". Click "Apply".

OBSERVED RESULT
The dropdown shows "Red & purple", but the actual effect is "Grayscale".

EXPECTED RESULT
The actual effect is "Red & purple".

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1
Kernel Version: 6.18.1-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 16 GiB of RAM (15.0 GiB usable)
Graphics Processor: AMD Radeon Graphics
Comment 1 Nate Graham 2025-12-18 20:10:14 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2026-01-24 14:51:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3477
Comment 3 Bug Janitor Service 2026-01-24 21:25:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3479
Comment 4 David Edmundson 2026-01-24 21:32:12 UTC
Git commit 077fcba23cee0b40910d39336e6a589c81572c73 by David Edmundson.
Committed on 24/01/2026 at 21:24.
Pushed by davidedmundson into branch 'Plasma/6.6'.

kcm/access: Fix incorrect color blindness mode after Defaults +
re-enable

After clicking “Defaults” to disable the color blindness effect and then
re-enabling it, the effect was applied using the previously active mode
instead of the currently selected one.


(cherry picked from commit 150bfdf548bae0be9f6b7d02820d9e1631d9179b)

Co-authored-by: Andrew Gigena <mail@andrewgigena.dev>

M  +2    -1    kcms/access/kcmaccess.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/077fcba23cee0b40910d39336e6a589c81572c73