kcm/access: Fix incorrect color blindness mode after Defaults + re-enable

After clicking “Defaults” to disable the color blindness effect and then
re-enabling it, the effect was applied using the previously active mode
instead of the currently selected one.

BUG: 513489